[package]
name = "passepartout"
version = "0.1.0"
authors = ["FlorianMortgat <5845502+FlorianMortgat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" }
sqlite = "0.26.0"

